# techchallenge_fase4_rm366835

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  inference.py  main.py  monitoring.py  schemas.py
configs/: default.yaml
src/: __init__.py  data.py  evaluate.py  features.py  model.py  train.py  utils.py
tests/: test_api.py  test_features.py  test_inference.py
