[project]
name = "fiap-fase4-lstm-stock-forecast"
version = "0.1.0"
description = "FIAP Pos Tech MLET Fase 4 LSTM stock closing-price forecasting API"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
